# pythonSDKTest

./: README.md  requirements.txt  setup.cfg  setup.sh
.github/workflows/: publish-to-test-pypi.yml  python-app.yml
elijahGreetings/src/: greetings_function.py
elijahGreetings/tests/: test_greetings.py
sdk/: greetings.py
tests/: test_greetings.py
