[metadata]
name = elijahGreetings
version = 0.0.1
author = Elijah Flinders
author_email = elijah.flinders@garmin.com
url = https://github.com/Lijah99/pythonSDKTest
description = Test sdk
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True